doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\FRIDAY\Documents\code\JavaPrograms
-d
C:\Users\FRIDAY\Documents\code\JavaPrograms\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\FRIDAY\Documents\code\JavaPrograms\MAXBTWEENTWONUM.java
<---- end of javadoc command ---->
Loading source file C:\Users\FRIDAY\Documents\code\JavaPrograms\MAXBTWEENTWONUM.java...
C:\Users\FRIDAY\Documents\code\JavaPrograms\MAXBTWEENTWONUM.java:3: error: ';' expected
    public static void main()
                             ^
C:\Users\FRIDAY\Documents\code\JavaPrograms\MAXBTWEENTWONUM.java:5: error: class, interface, or enum expected
{
^
C:\Users\FRIDAY\Documents\code\JavaPrograms\MAXBTWEENTWONUM.java:6: error: class, interface, or enum expected
public static void  max(double a,double b)
              ^
3 errors
